mail links now also with arrow icon

--- a/style/_content.scss
+++ b/style/_content.scss
@@ -58,7 +58,7 @@ h6 {
 
         // Links in regular text
         p a {
-            display: inline-block;
+            display: inline;
             height: auto;
         }
 
