--- a/style/style.css
+++ b/style/style.css
@@ -1256,21 +1256,15 @@ main .content_sidebar-note p a::before {
   background-position: left center;
 }
 
-main .content p a[href*='mailto'],
 main .content p a[href*='tel'],
-nav .sidebar_note p a[href*='mailto'],
 nav .sidebar_note p a[href*='tel'],
-main .content_sidebar-note p a[href*='mailto'],
 main .content_sidebar-note p a[href*='tel'] {
   height: auto;
   display: inline;
 }
 
-main .content p a[href*='mailto']::before,
 main .content p a[href*='tel']::before,
-nav .sidebar_note p a[href*='mailto']::before,
 nav .sidebar_note p a[href*='tel']::before,
-main .content_sidebar-note p a[href*='mailto']::before,
 main .content_sidebar-note p a[href*='tel']::before {
   display: none;
 }
@@ -1360,19 +1354,13 @@ main .content_sidebar-note p a[href*='portal.hfk-bremen.de']:hover::before {
 }
 
 @media (min-width: 1680px) {
-  main .content p a:not([href*='mailto:']),
   main .content p a:not([href*='tel:']),
-  nav .sidebar_note p a:not([href*='mailto:']),
   nav .sidebar_note p a:not([href*='tel:']),
-  main .content_sidebar-note p a:not([href*='mailto:']),
   main .content_sidebar-note p a:not([href*='tel:']) {
     height: 3.125rem;
   }
-  main .content p a:not([href*='mailto:'])::before,
   main .content p a:not([href*='tel:'])::before,
-  nav .sidebar_note p a:not([href*='mailto:'])::before,
   nav .sidebar_note p a:not([href*='tel:'])::before,
-  main .content_sidebar-note p a:not([href*='mailto:'])::before,
   main .content_sidebar-note p a:not([href*='tel:'])::before {
     width: 36px;
     height: 26px;
@@ -1605,7 +1593,7 @@ h6 {
 }
 
 .wrapper main .content p a {
-  display: inline-block;
+  display: inline;
   height: auto;
 }
 
