--- a/style/_content.scss
+++ b/style/_content.scss
@@ -199,14 +199,12 @@ h6 {
     }
 
     h3 {
-        font-size: $font-size-25;
         margin: 1.4rem 0;
     }
 
     h4,
     h5,
     h6 {
-        font-size: $font-size-25;
         margin: 1.2rem 0;
     }
 
@@ -244,6 +242,14 @@ h6 {
 }
 
 @media (min-width: $breakpoint-screen) {
+
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-size: $font-size-25;
+    }
+
     .wrapper main {
         .content {
 
