tables styled addition

--- a/style/_content-tables.scss
+++ b/style/_content-tables.scss
@@ -34,6 +34,10 @@
             left: -9999px;
         }
 
+        tr {
+            margin-bottom: 20px;
+        }
+
         td {
             /* Behave  like a "row" */
             border: none;
