--- a/style/_content.scss
+++ b/style/_content.scss
@@ -46,6 +46,7 @@ h6 {
         &>h6,
         &>ul,
         &>ol,
+        &>.ics-calendar,
         form,
         .wp-block-table {
             max-width: $content-text-width_s;
@@ -245,6 +246,7 @@ h6 {
             &>ul,
             &>ol,
             form,
+            &>.ics-calendar,
             .wp-block-table {
                 max-width: $content-text-width_m;
             }
